WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260974
REGRESSION(
267119@main
): [ macOS wk2 release ] fast/repaint/placeholder-after-caps-lock-hidden.html is a constant timeout.
https://bugs.webkit.org/show_bug.cgi?id=260974
Summary
REGRESSION(267119@main): [ macOS wk2 release ] fast/repaint/placeholder-after...
Ben Schwartz
Reported
2023-08-31 10:19:12 PDT
fast/repaint/placeholder-after-caps-lock-hidden.html This test is a constant timeout on release builds of wk2 running on macOS. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Frepaint%2Fplaceholder-after-caps-lock-hidden.html&platform=mac
TEXT DIFF (when marked as slow): +FAIL: Timed out waiting for notifyDone to be called + Tests that the placeholder text is repainted when the caps lock indicator is hidden. -(repaint rects - (rect 31 50 22 22) - (rect 36 55 12 12) - (rect 8 50 33 23) - (rect 13 55 23 13) - (rect 8 50 45 23) - (rect 13 55 35 13) - (rect 31 50 22 23) - (rect 36 55 12 13) - (rect 8 50 45 23) - (rect 13 55 35 13) - (rect 8 50 33 23) - (rect 13 55 23 13) - (rect 8 50 45 23) - (rect 13 55 35 13) -) REPRODUCTION: I was able to reproduce this bug on macOS Ventura (13.5, 22G74/arm64) ToT by using the following command: run-webkit-tests --clobber-old-results --verbose fast/repaint/placeholder-after-caps-lock-hidden.html REGRESSION: I bisected a regression point at
267119@main
. The bug does not reproduce at
267118@main
and the changes at
267119@main
appear directly related to the issue (and are likely what caused it). NOTE: The test was a constant failure prior to
267119@main
, so it's possible that the changes at
267119@main
simply changed the failure type.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-31 10:19:24 PDT
<
rdar://problem/114772162
>
EWS
Comment 2
2023-08-31 10:44:21 PDT
Test gardening commit
267508@main
(762ed20888ea): <
https://commits.webkit.org/267508@main
> Reviewed commits have been landed. Closing PR #17293 and removing active labels.
Abrar Rahman Protyasha
Comment 3
2023-08-31 14:10:48 PDT
As Ben noted, this test was always a failure and
267119@main
simply altered the failure mode to a timeout because of changes to the layout test. The underlying issue is that `UIScriptControllerMac::toggleCapsLock` just did not work correctly.
Abrar Rahman Protyasha
Comment 4
2023-08-31 14:20:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17305
EWS
Comment 5
2023-09-06 02:04:30 PDT
Committed
267666@main
(f40c7929020c): <
https://commits.webkit.org/267666@main
> Reviewed commits have been landed. Closing PR #17305 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug